fin premiere page

--- a/slider.html
+++ b/slider.html
@@ -17,7 +17,7 @@
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
 
 		<!-- LOADING FONTS AND ICONS -->
-		<link href="http://fonts.googleapis.com/css?family=Raleway%3A300%2C900%2C100%2C600%2C400" rel="stylesheet" property="stylesheet" type="text/css" media="all" /><link href="http://fonts.googleapis.com/css?family=Raleway%3A600%2C300%2C500%2C100" rel="stylesheet" property="stylesheet" type="text/css" media="all" />
+		<link href="http://fonts.googleapis.com/css?family=Raleway%3A300%2C900%2C100%2C600%2C400" rel="stylesheet" property="stylesheet" type="text/css" media="all" /><link href="http://fonts.googleapis.com/css?family=Raleway%3A200%2C300%2C500%2C100%2C600" rel="stylesheet" property="stylesheet" type="text/css" media="all" /><link href="http://fonts.googleapis.com/css?family=Roboto%3A100" rel="stylesheet" property="stylesheet" type="text/css" media="all" />
 
 		<link rel="stylesheet" type="text/css" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.min.css">
@@ -60,11 +60,11 @@
 		<!-- LAYER NR. 1 -->
 		<div class="tp-caption Photography-Subline   tp-resizeme" 
 			 id="slide-110-layer-4" 
-			 data-x="['center','center','center','center']" data-hoffset="['-299','42','0','0']" 
-			 data-y="['middle','middle','middle','middle']" data-voffset="['-144','-157','-157','-80']" 
+			 data-x="['center','center','center','center']" data-hoffset="['192','42','0','0']" 
+			 data-y="['middle','middle','middle','middle']" data-voffset="['-52','-157','-157','-80']" 
 						data-fontsize="['20','20','20','17']"
 			data-lineheight="['30','30','30','26']"
-			data-fontweight="['600','300','300','300']"
+			data-fontweight="['200','300','300','300']"
 			data-color="['rgba(255, 255, 255, 1.00)','rgba(119, 119, 119, 1.00)','rgba(119, 119, 119, 1.00)','rgba(119, 119, 119, 1.00)']"
 			data-width="none"
 			data-height="none"
@@ -73,7 +73,7 @@
  
 			 data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
 			 data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;" 
-			 data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" 
+			 data-mask_in="x:0px;y:[100%];" 
 			 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
 			data-start="500" 
 			data-splitin="none" 
@@ -81,13 +81,13 @@
 			data-responsive_offset="on" 
 
 			
-			style="z-index: 5; white-space: nowrap; font-weight: 600; color: rgba(255, 255, 255, 1.00);">Lorem ipsum dolor sit amet, consectetur </div>
+			style="z-index: 5; white-space: nowrap; font-weight: 200; color: rgba(255, 255, 255, 1.00);">Lorem ipsum dolor sit amet, consectetur </div>
 
 		<!-- LAYER NR. 2 -->
 		<div class="tp-caption Photography-Display   tp-resizeme" 
 			 id="slide-110-layer-1" 
-			 data-x="['center','center','center','center']" data-hoffset="['103','33','0','0']" 
-			 data-y="['middle','middle','middle','middle']" data-voffset="['-45','-40','-40','-20']" 
+			 data-x="['center','center','center','center']" data-hoffset="['125','33','0','0']" 
+			 data-y="['middle','middle','middle','middle']" data-voffset="['16','-40','-40','-20']" 
 						data-fontsize="['80','80','80','40']"
 			data-lineheight="['80','70','70','50']"
 			data-fontweight="['500','100','100','100']"
@@ -98,7 +98,7 @@
  
 			 data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
 			 data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;" 
-			 data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" 
+			 data-mask_in="x:0px;y:[100%];" 
 			 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
 			data-start="750" 
 			data-splitin="none" 
@@ -111,11 +111,10 @@
 		<!-- LAYER NR. 3 -->
 		<div class="tp-caption Photography-Display   tp-resizeme" 
 			 id="slide-110-layer-3" 
-			 data-x="['center','center','center','center']" data-hoffset="['280','160','0','0']" 
-			 data-y="['middle','middle','middle','middle']" data-voffset="['40','40','40','20']" 
+			 data-x="['center','center','center','center']" data-hoffset="['300','160','0','0']" 
+			 data-y="['middle','middle','middle','middle']" data-voffset="['90','40','40','20']" 
 						data-fontsize="['80','80','80','40']"
 			data-lineheight="['70','70','70','50']"
-			data-fontweight="['500','100','100','100']"
 			data-color="['rgba(247, 4, 10, 1.00)','rgba(0, 255, 222, 1.00)','rgba(0, 255, 222, 1.00)','rgba(0, 255, 222, 1.00)']"
 			data-width="none"
 			data-height="none"
@@ -124,7 +123,7 @@
  
 			 data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
 			 data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;" 
-			 data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" 
+			 data-mask_in="x:0px;y:[100%];" 
 			 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
 			data-start="1000" 
 			data-splitin="none" 
@@ -132,35 +131,31 @@
 			data-responsive_offset="on" 
 
 			
-			style="z-index: 7; white-space: nowrap; font-weight: 500; color: rgba(247, 4, 10, 1.00);">Red Kiss
+			style="z-index: 7; white-space: nowrap; color: rgba(247, 4, 10, 1.00);">Red Kiss
  </div>
 
 		<!-- LAYER NR. 4 -->
-		<div class="tp-caption rev-btn rev-maxround rev-bordered  " 
-			 id="slide-110-layer-6" 
-			 data-x="['center','center','center','center']" data-hoffset="['0','-66','0','0']" 
-			 data-y="['middle','middle','bottom','bottom']" data-voffset="['269','181','100','100']" 
-						data-fontsize="['20','15','15','15']"
-			data-lineheight="['20','15','15','15']"
-			data-width="none"
+		<div class="tp-caption   tp-resizeme" 
+			 id="slide-110-layer-7" 
+			 data-x="['center','center','center','center']" data-hoffset="['6','6','6','6']" 
+			 data-y="['top','top','top','top']" data-voffset="['693','693','693','693']" 
+						data-width="none"
 			data-height="none"
 			data-whitespace="nowrap"
 			data-transform_idle="o:1;"
-				data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power3.easeOut;"
-				data-style_hover="c:rgba(255, 255, 255, 1.00);bc:rgba(247, 4, 10, 1.00);"
+				data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:1000;e:Linear.easeNone;"
+				data-style_hover="c:rgba(255, 255, 255, 1.00);bc:rgba(247, 4, 10, 1.00);br:0px 0px 0px 0px;"
  
-			 data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
-			 data-transform_out="y:[175%];s:1000;e:Power2.easeInOut;" 
-			 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
+			 data-transform_in="opacity:0;s:300;e:Power2.easeInOut;" 
+			 data-transform_out="opacity:0;s:300;" 
 			data-start="1250" 
 			data-splitin="none" 
 			data-splitout="none" 
 			data-actions='[{"event":"click","action":"jumptoslide","slide":"rs-111","delay":""}]'
-			data-basealign="slide" 
 			data-responsive_offset="on" 
-			data-responsive="off"
+
 			
-			style="z-index: 8; white-space: nowrap; font-size: 20px; line-height: 20px; font-weight: 600; color: rgba(255, 255, 255, 1.00);font-family:Raleway;background-color:rgba(0, 0, 0, 0);padding:13px 35px 13px 35px;border-color:rgba(255, 255, 255, 0.25);border-style:solid;border-width:2px;letter-spacing:1px;">MES CREATIONS </div>
+			style="z-index: 8; white-space: nowrap; font-size: 30px; line-height: 30px; font-weight: 100; color: rgba(255, 255, 255, 1.00);font-family:Roboto;padding:15px 15px 15px 15px;border-color:rgba(255, 255, 255, 1.00);border-style:solid;border-width:2px;cursor:pointer;">MES CREATIONS </div>
 	</li>
 	<!-- SLIDE  -->
     <li data-index="rs-111" data-transition="slideoververtical" data-slotamount="7" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-thumb="assets/100x50_photography2.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Portfolio" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
